--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
             <div class="carousel-item active">
                 <img src="images/img1.jpg" width="100%" height="500px" class="d-block " alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>Naruto Uzumaki</h5>
+                    <p>Naruto is an orphan who has a dangerous fox-like entity known as Kurama the Nine-Tailed Fox
+                        sealed within his body by his father.</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -101,8 +102,9 @@
             <div class="carousel-item">
                 <img src="/images/img3.jpg" width="100%" height="500px" class="d-block " alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>Deadpool</h5>
+                    <p>Deadpool is initially depicted as a supervillain of the New Mutants and X-Force, though later
+                        stories would portray him as an antihero.</p>
                 </div>
             </div>
         </div>
